k8s/theia/generated-yamls/crs/shared-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"1m","nginx.ingress.kubernetes.io/proxy-buffer-size":"128k","nginx.ingress.kubernetes.io/rewrite-target":"/$2","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"henkan-designer-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"theia.localtest.me"}]}}
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2026-01-05T08:49:13Z"
  generation: 2
  name: henkan-designer-ingress
  namespace: default
  ownerReferences:
    - apiVersion: example.suleyman.io/v1
      kind: AppDefinition
      name: henkan-designer
      uid: cb715568-1406-426f-a754-10a210f9539c
  resourceVersion: "163038"
  uid: f32c4795-c08d-4d5d-99e1-a322e5e42818
spec:
  ingressClassName: nginx
  rules:
    - host: theia.localtest.me
    - host: theia.localtest.me
      http:
        paths:
          - backend:
              service:
                name: session-bartu-henkan-designer-afc9ae836101
                port:
                  number: 3000
            path: /d25760cb-41d1-4b3e-92db-afc9ae836101(/|$)(.*)
            pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
      - ip: 10.98.95.61
